--- a/anmat/descarga_anmat.ipynb
+++ b/anmat/descarga_anmat.ipynb
@@ -71,18 +71,17 @@
    "metadata": {},
    "source": [
     "## Descarga de normativa general\n",
-    "No se trata solo de PDFs, también hay textos planos publicados:\n",
+    "No se trata solo de PDFs, también hay textos planos publicados en HTML:\n",
     "\n",
-    "PDFs, raices de nombres de archivos:\n",
+    "PDFs, raíces de nombres de archivos:\n",
     "- circular_\n",
     "- anmat_circular_\n",
     "- anmat_disposicion_\n",
     "\n",
-    "Textos planos, raices de nombres de archivos:\n",
+    "Textos planos en HTML, _ídem._\n",
     "- circular-\n",
     "- decreto-\n",
-    "- disposici%C3%B3n-\n",
-    "\n"
+    "- disposici%C3%B3n-"
    ]
   },
   {
