--- a/Parse ANMAT.ipynb
+++ b/Parse ANMAT.ipynb
@@ -2,20 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "55904b40",
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "import time\n",
-    "import requests"
+    "import requests\n",
+    "import os\n",
+    "from requests.exceptions import ConnectTimeout\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b590009",
    "metadata": {},
    "outputs": [],
@@ -47,17 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b2c16ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(pdf_links)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "727787d2",
    "metadata": {},
    "outputs": [],
@@ -67,16 +63,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c6139850",
+   "execution_count": 18,
+   "id": "1aa6f654",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), 'anmat')\n",
+    "chrome_options = Options()\n",
+    "chrome_prefs = {\n",
+    "    \"profile.default_content_settings.popups\": 0,\n",
+    "    \"download.default_directory\": download_dir,\n",
+    "    \"directory_upgrade\": True,\n",
+    "    \"download.prompt_for_download\": False,\n",
+    "    \"safebrowsing.enabled\": True\n",
+    "}\n",
+    "chrome_options.add_experimental_option(\"prefs\", chrome_prefs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c6139850",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anmat\\circular_02-16_productos_medicos_incumbencias_de_directores_tecnicos.pdf\n",
+      "anmat\\circular_ms_8_16.pdf\n",
+      "anmat\\anmat_circular_7_2013.pdf\n",
+      "anmat\\anmat_circular_3_11.pdf\n",
+      "anmat\\anmat_circular_1_11.pdf\n",
+      "anmat\\Resolucion_462-10.pdf\n",
+      "anmat\\Resolucion_405-2010.pdf\n",
+      "anmat\\Resolucion_406-2010.pdf\n",
+      "anmat\\anmat_circular_4_10.pdf\n",
+      "anmat\\disposicion_anmat_1743_2009.pdf\n",
+      "anmat\\anmat_disposicion_615_2007.pdf\n",
+      "anmat\\disposicion_anmat_7398_2007.pdf\n",
+      "anmat\\disposicion_anmat_3110_2007.pdf\n",
+      "anmat\\disposicion_anmat_1955_2007.pdf\n",
+      "anmat\\anmat_disposicion_1336_2006.pdf\n",
+      "anmat\\Disposicion_2005_2060.pdf\n",
+      "anmat\\anmat_disposicion_998_2004.pdf\n",
+      "anmat\\anmat_disposicion_anmat_1507_2002.pdf\n",
+      "anmat\\anmat_disposicion_2438_2000.pdf\n",
+      "anmat\\anmat_disposicion_935_2000.pdf\n",
+      "anmat\\disposicion_anmat_4306_1999.pdf\n",
+      "anmat\\disposicion_anmat_2675_1999.pdf\n",
+      "anmat\\disposicion_anmat_3409_1999.pdf\n",
+      "anmat\\disposicion_anmat_1149_1997.pdf\n",
+      "anmat\\Disposicion_ANMAT_1930-1995.pdf\n",
+      "anmat\\disposicion_anmat_2305-1995.pdf\n",
+      "anmat\\disposicion_anmat_1930_1995.pdf\n",
+      "anmat\\Decreto_2092-1991.pdf\n",
+      "anmat\\anmat_resolucion_3329_1991.pdf\n",
+      "anmat\\anmat_disposicion_38_1990.pdf\n",
+      "anmat\\anmat_resolucion_56_1989.pdf\n",
+      "anmat\\anmat_disposicion_858_1989.pdf\n",
+      "anmat\\anmat_disposicion_857_1989.pdf\n",
+      "anmat\\anmat_disposicion_856_1989.pdf\n",
+      "anmat\\anmat_disposicion_855_1989.pdf\n",
+      "anmat\\anmat_disposicion_854_1989.pdf\n",
+      "anmat\\anmat_disposicion_853_1989.pdf\n",
+      "anmat\\anmat_resolucion_129_87.pdf\n",
+      "anmat\\Decreto_2126-1971.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "#descargar pdf\n",
     "for pdf_link in pdf_links:\n",
     "    if '.pdf' in pdf_link:\n",
     "        pdf_response = requests.get(pdf_link)\n",
-    "        file_name = os.path.join('anmat', pdf_link.split(\"/\")[-1] + '.pdf')\n",
+    "        file_name = os.path.join('anmat', pdf_link.split(\"/\")[-1])\n",
     "        with open(file_name, 'wb') as file:\n",
     "            file.write(pdf_response.content)\n",
     "        print(f\"{file_name}\")"
@@ -84,20 +145,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ea95406",
+   "execution_count": 6,
+   "id": "5e1d5993",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#descargar texto\n",
-    "for non_pdf_link in pdf_links:\n",
-    "    if '.pdf' not in non_pdf_link:\n",
-    "        response = requests.get(non_pdf_link+'/texto')\n",
-    "        file_name = os.path.join('anmat', non_pdf_link.split(\"/\")[-1] + '.txt')\n",
-    "        with open(file_name, 'wb') as file:\n",
-    "            file.write(response.content)\n",
-    "        print(f\"{file_name}\")"
+    "def download_documents(url):\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    links = soup.find_all('a', href=True)\n",
+    "    for link in links:\n",
+    "        href = link['href'].replace('blank:#', '').strip()\n",
+    "        if href.startswith('https://www.argentina.gob.ar/sites/default/files/'):\n",
+    "            file_name = os.path.join(download_dir, href.split('/')[-1])\n",
+    "            try:\n",
+    "                print(f\"cargando: {href}\")\n",
+    "                file_response = requests.get(href)\n",
+    "                file_response.raise_for_status()\n",
+    "                with open(file_name, 'wb') as file:\n",
+    "                    file.write(file_response.content)\n",
+    "                print(f\" terminado: {file_name}\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"error {href}: {e}\")\n",
+    "        if href.startswith('https://www.argentina.gob.ar/normativa/nacional/'):\n",
+    "            response = requests.get(non_pdf_link+'/texto')\n",
+    "            soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "            doc_div = soup.find('body')\n",
+    "            if doc_div:\n",
+    "                file_name = os.path.join('anmat', non_pdf_link.split(\"/\")[-1] + '.txt')\n",
+    "                with open(file_name, 'w', encoding='utf-8') as file:\n",
+    "                    for string in doc_div.stripped_strings:\n",
+    "                        file.write(string + \"\\n\")\n",
+    "            print(f\"{file_name}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7417a791",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cargando: https://www.argentina.gob.ar/sites/default/files/dec_2126.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\dec_2126.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_i_caa.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_i_caa.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/anmat_capitulo_ii_establecactualiz_2023-09.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\anmat_capitulo_ii_establecactualiz_2023-09.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_iii_prod_alimenticiosactualiz_2023-05_1.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_iii_prod_alimenticiosactualiz_2023-05_1.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_iv_envasesactualiz_2024-08.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_iv_envasesactualiz_2024-08.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/anmat_caa_capitulo_v_rotulacion_actualiz_2021-09.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\anmat_caa_capitulo_v_rotulacion_actualiz_2021-09.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_vi_carneos_res_conj_21-2023_actualiz_2024-5.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_vi_carneos_res_conj_21-2023_actualiz_2024-5.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_vii_grasosactualiz_2023-11.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_vii_grasosactualiz_2023-11.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_viii_lacteosactualiz_2023-04.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_viii_lacteosactualiz_2023-04.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/anmat_capitulo_ix_harinas.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\anmat_capitulo_ix_harinas.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_x_azucaradosactualiz_2023-05_1.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_x_azucaradosactualiz_2023-05_1.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xi_vegetales_actualiz_2024-8.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xi_vegetales_actualiz_2024-8.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xii_aguas_actualiz_2024-04.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xii_aguas_actualiz_2024-04.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xiii_beb_fermentadasactualiz_2024-8.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xiii_beb_fermentadasactualiz_2024-8.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/anmat_caa_capitulo_xiv_act_2023_04.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\anmat_caa_capitulo_xiv_act_2023_04.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xv_estimulantesactualiz_2024-08.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xv_estimulantesactualiz_2024-08.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xvi_correctivosactualiz_2024-08.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xvi_correctivosactualiz_2024-08.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xvii_dieteticosactualiz_2024-08.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xvii_dieteticosactualiz_2024-08.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/anmat_capitulo_xviii_aditivos.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\anmat_capitulo_xviii_aditivos.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xix_aislados_protactualiz_2023-11.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xix_aislados_protactualiz_2023-11.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xx_metodologiaactualiz_2023-11_1.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xx_metodologiaactualiz_2023-11_1.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/anmat_capitulo_xxi_procedimientosactualiz_2023-09.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\anmat_capitulo_xxi_procedimientosactualiz_2023-09.pdf\n",
+      "cargando: https://www.argentina.gob.ar/sites/default/files/capitulo_xxii_miscelaneos_actualiz_2024_-_8.pdf\n",
+      " terminado: C:\\Users\\blank\\Projects\\RMT\\nlpTP\\anmat\\capitulo_xxii_miscelaneos_actualiz_2024_-_8.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "for non_pdf_link in pdf_links:\n",
+    "    if '.pdf' not in non_pdf_link and 'boletinoficial' not in non_pdf_link:\n",
+    "        download_documents(non_pdf_link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ce225c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_pdf_link = 'https://www.boletinoficial.gob.ar/detalleAviso/primera/313423/20240906'\n",
+    "driver = webdriver.Chrome(options=chrome_options)                \n",
+    "driver.get(non_pdf_link) \n",
+    "\n",
+    "pdf_button = driver.find_element(By.CSS_SELECTOR, \"div.panel-body[onclick^='descargarPDFAnexo']\")\n",
+    "parent_element = pdf_button.find_element(By.XPATH, \"..\")\n",
+    "ActionChains(driver).move_to_element(parent_element).click().perform()\n",
+    "#print(\"se descarga el pdf\")\n",
+    "time.sleep(5)\n",
+    "\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44780930",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for non_pdf_link in pdf_links:\n",
+    "    if '.pdf' not in non_pdf_link and 'boletinoficial' in non_pdf_link:\n",
+    "        try:\n",
+    "            response = requests.get(non_pdf_link)\n",
+    "            soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "            aviso_div = soup.find('div', {'class': 'row', 'id': 'detalleAviso'})\n",
+    "            if aviso_div:\n",
+    "                file_name = os.path.join(download_dir, non_pdf_link.split(\"/\")[-1] + '.txt')\n",
+    "                with open(file_name, 'w', encoding='utf-8') as file:\n",
+    "                    for string in aviso_div.stripped_strings:\n",
+    "                        file.write(string + \"\\n\")\n",
+    "                    print(f\"{file_name}\")\n",
+    "\n",
+    "            #selenium para descargar pdf añadido si existe\n",
+    "            try:\n",
+    "                print('loading pdf:driver')\n",
+    "                driver = webdriver.Chrome(options=chrome_options)                 \n",
+    "                driver.get(non_pdf_link)            \n",
+    "                pdf_button = driver.find_element(By.CSS_SELECTOR, \"div.panel-body[onclick^='descargarPDFAnexo']\")\n",
+    "                parent_element = pdf_button.find_element(By.XPATH, \"..\")\n",
+    "                print('loading pdf:button')\n",
+    "                ActionChains(driver).move_to_element(parent_element).click().perform()\n",
+    "                time.sleep(5)\n",
+    "                driver.quit()\n",
+    "            except Exception:\n",
+    "                pass\n",
+    "        except ConnectTimeout:\n",
+    "            print(non_pdf_link, 'connection timeout')\n",
+    "            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e55f5397",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
