cleansing and normalising tasks defined

--- a/arn/normas_tokens/tokenizador.ipynb
+++ b/arn/normas_tokens/tokenizador.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n"
+      "codespaces\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Limpieza (cleaning) | ?"
+    "## Limpieza (cleansing ) | ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fuente: https://dylancastillo.co/posts/nlp-snippets-clean-and-tokenize-text-with-python.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Natural Language Processing (NLP), text normalization and text cleansing are essential preprocessing operations aimed at preparing text data for analysis or modeling. While these terms sometimes overlap, they generally refer to different sets of tasks. Here's a breakdown of what each typically involves:\n",
+    "Text Cleansing\n",
+    "\n",
+    "Text cleansing refers to operations that remove or correct unwanted elements in the text to make it cleaner and more consistent for processing. It usually involves:\n",
+    "\n",
+    "- Removing unnecessary characters: Deleting punctuation marks, special symbols, emojis, and other non-textual content (e.g., !, #, @, etc.).\n",
+    "- Removing extra whitespace: Stripping unnecessary spaces, tabs, or newlines.\n",
+    "- Correcting spelling or grammatical errors: Fixing typos or misspelled words, though this may be considered part of more advanced cleaning.\n",
+    "- Filtering stopwords: Removing common words (like \"the,\" \"and,\" etc.) that do not contribute significant meaning.\n",
+    "- Removing URLs or email addresses: Cleaning the text of extraneous web addresses or emails that are not useful for text analysis.\n",
+    "- Handling special tokens: Removing or replacing certain patterns like hashtags, mentions, or digits that don't add to the context."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Minúsculas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primer letra en mayúscula -> minúscula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# minúsculas_texto = texto.lower()\n",
+    "minúsculas_texto = texto.casefold() # solo la primer letra en minúscula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'das de incendios, que puedan afectar la seguridad radiológica o nuclear.\\n\\nb. alcance\\n2. esta norma es aplicable al diseño, puesta en marcha y operación de reactores de investigación.\\nel cumplimiento d'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minúsculas_texto[500:700]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quitar signos de puntuación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from string import punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s que puedan afectar la seguridad radiológica o nuclear\\n\\nb alcance\\n2 esta norma es aplicable al diseño puesta en marcha y operación de reactores de investigación\\nel cumplimiento de la presente norma y'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sinPuntuación = re.sub(f\"[{re.escape(punctuation)}]\", \"\", minúsculas_texto)\n",
+    "sinPuntuación[500:700]"
    ]
   },
   {
@@ -132,23 +238,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Normalization involves transforming the text into a consistent, standardized format to make it suitable for algorithms that need regular input formats. It includes:\n",
+    "\n",
+    "- Lowercasing: Converting all text to lowercase to avoid treating words like \"Apple\" and \"apple\" differently.\n",
+    "- Expanding contractions: Converting contractions like \"can't\" to \"cannot\" for consistency.\n",
+    "- Stemming: Reducing words to their base or root form (e.g., \"running\" to \"run\") using heuristics.\n",
+    "- Lemmatization: Converting words to their canonical base form, considering their part of speech (e.g., \"better\" to \"good\").\n",
+    "- Standardizing formats: Ensuring dates, numbers, currencies, and other entities follow a consistent format.\n",
+    "- Accented character normalization: Converting accented characters to their non-accented equivalents (e.g., \"é\" to \"e\").\n",
+    "- Handling Unicode or ASCII conversions: Converting different encodings into a unified format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tokenización | NLTK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting nltk\n",
+      "  Downloading nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting click (from nltk)\n",
+      "  Downloading click-8.1.7-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: joblib in /home/codespace/.local/lib/python3.12/site-packages (from nltk) (1.4.2)\n",
+      "Collecting regex>=2021.8.3 (from nltk)\n",
+      "  Downloading regex-2024.9.11-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
+      "Collecting tqdm (from nltk)\n",
+      "  Downloading tqdm-4.66.5-py3-none-any.whl.metadata (57 kB)\n",
+      "Downloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading regex-2024.9.11-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (797 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m797.0/797.0 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading click-8.1.7-py3-none-any.whl (97 kB)\n",
+      "Downloading tqdm-4.66.5-py3-none-any.whl (78 kB)\n",
+      "Installing collected packages: tqdm, regex, click, nltk\n",
+      "Successfully installed click-8.1.7 nltk-3.9.1 regex-2024.9.11 tqdm-4.66.5\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /home/vbettachini/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to /home/codespace/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
       "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     /home/vbettachini/nltk_data...\n",
+      "[nltk_data]     /home/codespace/nltk_data...\n",
       "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
      ]
     },
@@ -158,7 +308,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1354,7 @@
        " ...]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
