--- a/arn/Grafo_normas_nuclear.ipynb
+++ b/arn/Grafo_normas_nuclear.ipynb
@@ -51,6 +51,35 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Normas sin cita"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Proporción de normas si adyacencias:  70.3125 %\n"
+          ]
+        }
+      ],
+      "source": [
+        "# number of adj_list without adjacencies\n",
+        "sinCita = 0\n",
+        "for key in adj_list:\n",
+        "  if len(adj_list[key])==0:\n",
+        "    sinCita += 1\n",
+        "print(\"Proporción de normas si adyacencias: \", sinCita / len(adj_list) * 100, \"%\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Norma faltante"
       ]
     },
@@ -629,7 +658,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "jupyter",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
