--- a/arn/vectorstore.ipynb
+++ b/arn/vectorstore.ipynb
@@ -8,6 +8,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determina entorno de ejecución: local o Colab\n",
+    "\n",
+    "# if (firstrun):\n",
+    "if('google.colab' in str(get_ipython() ) ):\n",
+    "    environment= 'google'\n",
+    "else:\n",
+    "    import os\n",
+    "    if (os.environ.get('PWD')=='/kaggle/working'):\n",
+    "        environment= 'kaggle'\n",
+    "    else:\n",
+    "        environment= 'local'\n",
+    "print(environment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Descarga de texto normas\n",
+    "if (environment=='google'):\n",
+    "  ! wget https://github.com/bettachini/nlpTP/blob/main/arn/gu%C3%ADas_texto.zip?raw=true\n",
+    "  ! unzip guías_texto.zip\n",
+    "  ! rm guías_texto.zip\n",
+    "\n",
+    "  ! wget https://github.com/bettachini/nlpTP/blob/main/arn/normas_texto.zip?raw=true\n",
+    "  ! unzip normas_texto.zip\n",
+    "  ! rm normas_texto.zip"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
