--- a/arn/vectorstore.ipynb
+++ b/arn/vectorstore.ipynb
@@ -260,15 +260,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    from langchain.vectorstores import Chroma\n",
+    "    import chromadb\n",
     "except ImportError:\n",
     "    ! pip install chromadb\n",
-    "    from langchain.vectorstores import Chroma"
+    "from langchain.vectorstores import Chroma"
    ]
   },
   {
@@ -320,12 +320,25 @@
     "vectorstore_path = './vectorstore'  # Replace with your path\n",
     "\n",
     "# Create or load an existing Chroma vector store\n",
-    "vectorstore = Chroma.from_documents(\n",
+    "try:\n",
+    "  vectorstore = Chroma.from_documents(\n",
     "    documents=split_documents, \n",
     "    embedding=embeddings_model, \n",
     "    persist_directory=vectorstore_path\n",
-    ")\n",
+    "  )\n",
+    "except:\n",
+    "  #Installs Ollama\n",
+    "  !curl -fsSL https://ollama.com/install.sh | sh\n",
+    "  # Runs Ollama service in the background\n",
+    "  !ollama serve &>/dev/null&\n",
+    "  # Downloads the pre-trained model\n",
+    "  ! ollama pull all-minilm\n",
     "\n",
+    "  vectorstore = Chroma.from_documents(\n",
+    "    documents=split_documents, \n",
+    "    embedding=embeddings_model, \n",
+    "    persist_directory=vectorstore_path\n",
+    "  )\n",
     "# Save the vector store to disk\n",
     "vectorstore.persist()"
    ]
