--- a/arn/vectorstore.ipynb
+++ b/arn/vectorstore.ipynb
@@ -43,11 +43,11 @@
    "source": [
     "# Descarga de texto normas\n",
     "if (environment=='google'):\n",
-    "  ! wget https://github.com/bettachini/nlpTP/blob/main/arn/gu%C3%ADas_texto.zip?raw=true\n",
+    "  ! wget https://github.com/bettachini/nlpTP/blob/main/arn/gu%C3%ADas_texto.zip?raw=true -O guías_texto.zip\n",
     "  ! unzip guías_texto.zip\n",
     "  ! rm guías_texto.zip\n",
     "\n",
-    "  ! wget https://github.com/bettachini/nlpTP/blob/main/arn/normas_texto.zip?raw=true\n",
+    "  ! wget https://github.com/bettachini/nlpTP/blob/main/arn/normas_texto.zip?raw=true -O normas_texto.zip\n",
     "  ! unzip normas_texto.zip\n",
     "  ! rm normas_texto.zip"
    ]
@@ -172,11 +172,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = normas_lista"
+    "documents = normativa_lista\n",
+    "# documents = normas_lista"
    ]
   },
   {
