all-minilm_vectorstore

--- a/arn/vectorstore.ipynb
+++ b/arn/vectorstore.ipynb
@@ -266,9 +266,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    import chromadb\n",
+    "  import chromadb\n",
     "except ImportError:\n",
-    "    ! pip install chromadb\n",
+    "  ! pip install chromadb\n",
     "from langchain.vectorstores import Chroma"
    ]
   },
@@ -318,7 +318,7 @@
    ],
    "source": [
     "# Specify a persistent storage path for Chroma\n",
-    "vectorstore_path = './vectorstore'  # Replace with your path\n",
+    "vectorstore_path = './all-minilm_vectorstore'  # Replace with your path\n",
     "\n",
     "# Create or load an existing Chroma vector store\n",
     "try:\n",
